--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,14 @@
     <input class="slider is-fullwidth is-danger" step="1" min="0" max="100" value="50" type="range">
 
     <input class="slider is-fullwidth is-info" step="1" min="0" max="100" value="50" type="range">
+
+    <input id="sliderWithValue" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
+    <output for="sliderWithValue">50</output>
+
+    <script src="js/bulma-slider.min.js"></script>
+    <script>
+        bulmaSlider.attach();
+    </script>
 </body>
 
 </html>
