fix: upgrade bulma and bugfix
1. upgrade bulma version to 1.0.1
2. fix slider-vertical appearance warn

--- a/test/index.html
+++ b/test/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bulmaSlider</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
-    <link rel="stylesheet" href="css/bulma-slider.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
+    <link rel="stylesheet" href="../dist/css/bulma-slider.min.css">
 </head>
 
 <body>
+    <h1> Square Thumb </h1>
     <input class="slider is-fullwidth" step="1" min="0" max="100" value="50" type="range">
 
     <input class="slider is-fullwidth is-success" step="1" min="0" max="100" value="50" type="range">
@@ -24,7 +25,30 @@
     <input id="sliderWithValue" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
     <output for="sliderWithValue">50</output>
 
-    <script src="js/bulma-slider.min.js"></script>
+    <input class="slider is-fullwidth is-info" step="1" min="0" max="100" value="50" type="range" orient="vertical">
+
+
+
+
+
+    <h1>Circle Thumb</h1>
+    <input class="slider is-fullwidth is-circle" step="1" min="0" max="100" value="50" type="range">
+
+    <input class="slider is-fullwidth is-circle is-success" step="1" min="0" max="100" value="50" type="range">
+
+    <input class="slider is-fullwidth is-circle is-warning" step="1" min="0" max="100" value="50" type="range">
+
+    <input class="slider is-fullwidth is-circle is-danger" step="1" min="0" max="100" value="50" type="range">
+
+    <input class="slider is-fullwidth is-circle is-info" step="1" min="0" max="100" value="50" type="range">
+
+    <input id="sliderCircleWithValue" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
+    <output for="sliderCircleWithValue">50</output>
+
+    <input class="slider  is-circle is-fullwidth is-info" step="1" min="0" max="100" value="50" type="range" orient="vertical">
+
+
+    <script src="../dist/js/bulma-slider.min.js"></script>
     <script>
         bulmaSlider.attach();
     </script>
